--- a/pickup/users/templates/friends/view_friend_requests.html
+++ b/pickup/users/templates/friends/view_friend_requests.html
@@ -15,7 +15,17 @@
         <a href="{% url 'friends' %}"> Go to Friend Page </a> <br>
         <p> This is the view friend requests page </p>
 
-        {% friend_requests request.user %}
+
+        {% for request in friend_requests %}
+            {{request.from_user.username }} <br>
+            <a href ="{%url 'change_friends' operation='add' pk=request.from_user.pk %}">
+            <button type="button" class="btn btn-success">Accept Friend</button>
+            </a>
+            <a href ="{%url 'change_friends' operation='decline' pk=request.from_user.pk %}">
+            <button type="button" class="button btn-danger">Decline Friend</button>
+            </a>
+        {% endfor %}
+
     </div>
 
 {% endblock sidebar-content %}
