--- a/pickup/users/templates/friends/view_friend_requests.html
+++ b/pickup/users/templates/friends/view_friend_requests.html
@@ -18,12 +18,12 @@
 
         {% for request in friend_requests %}
             {{request.from_user.username }} <br>
-            <a href ="{%url 'change_friends' operation='add' pk=request.from_user.pk %}">
-            <button type="button" class="btn btn-success">Accept Friend</button>
+            <a href ="{% url 'accept_friend' pk=request.from_user.pk %}">
+            <button type="button" class="btn btn-primary">Accept Friend</button>
             </a>
-            <a href ="{%url 'change_friends' operation='decline' pk=request.from_user.pk %}">
-            <button type="button" class="button btn-danger">Decline Friend</button>
-            </a>
+
+            <button type="button" class="button btn-secondary">Decline Friend</button>
+            </a> <br>
         {% endfor %}
 
     </div>
